2011-11-17  Ozkan Sezer  <sezeroz@gmail.com>

	* stdio/mingw_pformat.c (__pformat_cvt): Add missing initializer
	to the int_max member of fpi.  Needed due to recent gdtoa update.

2011-11-17  Ozkan Sezer  <sezeroz@gmail.com>

	Add gdiplus from mingw.org sources: Original work was by Markus Koenig
	<basilo@users.sourceforge.net>.  Patch to integrate into mingw-w64 was
	provided by Mark Dootson <mark.dootson@znix.com>.

	* lib32/gdiplus.def: New, generated from version 1.1.7601.17514 dll.
	* lib64/gdiplus.def: New, generated from version 1.1.7601.17514 dll.
	* libsrc/gdiplus.c: New.
	* Makefile.am: Add gdiplus defs and sources to build.
	* Makefile.in: Regenerate.

2011-11-17  Ozkan Sezer  <sezeroz@gmail.com>

	* Makefile.am: Add $(sysincludes) to all build rules' CPPFLAGS.
	* Makefile.in: Regenerate.

2011-11-15  Ozkan Sezer  <sezeroz@gmail.com>

	* lib64/kernel32.def (RegUnLoadKeyA): Comment out advapi32 export.
	(RegUnLoadKeyW): Likewise.

2011-11-09  Kai Tietz  <ktietz@redhat.com>

	* lib32/msvcr*.def: Make sure _assert and _wassert are marked DATA.
	* lib64/msvcr*.def: Likewise.

2011-11-04  Ozkan Sezer  <sezeroz@gmail.com>

	gdtoa: Sync to match the latest version at netlib.org as of Nov. 02
	2011.  Changelog from http://netlib.org/fp/changes :
	    Add field int_max to struct FPI and adjust gdtoa.c and *fmt.c
	    so gdtoa.c tests against fpi->int_max rather than Int_max. This
	    only affects some conversions by g_ffmt.c, which in some cases
	    produced too many digits.

2011-11-02  Ozkan Sezer  <sezeroz@gmail.com>

	Break stdio/asprintf.c and misc/uchar.c into pieces, one function
	per compilation unit:
	* stdio/vasprintf.c: New.
	* misc/uchar_c16rtomb.c: New.
	* misc/uchar_c32rtomb.c: New.
	* misc/uchar_mbrtoc16.c: New.
	* misc/uchar_mbrtoc32.c: New.
	* Makefile.am: Adjust.
	* Makefile.in: Regenerate.

2011-11-01  Ozkan Sezer  <sezeroz@gmail.com>

	* stdio/asprintf.c: Define __CRT__NO_INLINE before including any
	headers.