@@ -145,11 +145,12 @@ __report_error (const char *msg, ...)
   va_list argp;
   va_start (argp, msg);
 # ifdef __MINGW64_VERSION_MAJOR
-  fprintf (stderr, "Mingw-w64 runtime failure:\n");
+  __mingw_fprintf (stderr, "Mingw-w64 runtime failure:\n");
+  __mingw_vfprintf (stderr, msg, argp);
 # else
   fprintf (stderr, "Mingw runtime failure:\n");
-# endif
   vfprintf (stderr, msg, argp);
+#endif
   va_end (argp);
   abort ();
 #endif
