@@ -9,7 +9,7 @@
 #include <stdarg.h>
 #include <stdio.h>
 
-int vscanf(const char * __restrict__ format, va_list arg)
+int __ms_vscanf(const char * __restrict__ format, va_list arg)
 {
-  return vfscanf(stdin, format, arg);
+  return __ms_vfscanf(stdin, format, arg);
 }
