@@ -7,7 +7,7 @@
 #include <stdarg.h>
 #include <stdio.h>
 
-int __cdecl vsnprintf (char *s,size_t n,const char *format,va_list arg)
+int __cdecl __ms_vsnprintf (char *s,size_t n,const char *format,va_list arg)
 {
     return _vsnprintf(s, n, format, arg);
 }
