@@ -8,9 +8,9 @@
 #include <stdarg.h>
 #include <wchar.h>
 
-int  __cdecl vsnwprintf(wchar_t *buffer,  size_t n, const wchar_t * format, va_list argptr);
+int  __cdecl __ms_vsnwprintf(wchar_t *buffer,  size_t n, const wchar_t * format, va_list argptr);
 
-int  __cdecl vsnwprintf(wchar_t *buffer,  size_t n, const wchar_t * format, va_list argptr)
+int  __cdecl __ms_vsnwprintf(wchar_t *buffer,  size_t n, const wchar_t * format, va_list argptr)
 {
     return _vsnwprintf(buffer, n, format, argptr);
 }
